--- a/css/main.css
+++ b/css/main.css
@@ -12,103 +12,92 @@ img {
 }
 a {
 	text-decoration: none;
-	color: #333;
 }
 
 /* HEADER */
 header {
+	background-color: #f6f5f0;
+	border-bottom: 1px solid #c8c8c8;
 }
 header .inner {
+	width: 1100px;
+	height: 120px;
 	margin: 0 auto;
 	position: relative;
 }
 header .logo {
+	height: 75px;
 	position: absolute;
-	top: 15px;
+	top: 0;
 	bottom: 0;
+	left: 0;
+	margin: auto;
 }
-.logo-img {
-	width: 150px;
+header .sub-menu {
+	position: absolute;
+	top: 10px;
+	right: 0;
+	display: flex;
 }
-#grid {
-	display: grid;
-	grid-template-columns: 300px 1fr;
-	border-bottom: 1px solid #deba9d;
-	padding-bottom: 50px;
+header .sub-menu ul.menu {
+	font-family: Arial, sans-serif;
+	display: flex;
 }
-.submenu {
-	display: inline-block;
-	padding: 2rem;
-	margin-top: 40px;
+header .sub-menu ul.menu li {
+	position: relative;
 }
-.submenu a {
-	margin: 20px;
-	font-size: 30px;
-	font-family: 'Indie Flower', cursive;
-	color: #9e7777;
+header .sub-menu ul.menu li::before {
+	content: "";
+	width: 1px;
+	height: 12px;
+	background-color: #e5e5e5;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	margin: auto;
 }
-@media (max-width: 500px) {
-	#grid {
-		display: block;
-		border-bottom: none;
-	}
-	header .logo {
-		position: absolute;
-		top: 15px;
-		bottom: 0;
-		left: 180px;
-	}
-	.submenu {
-		display: inline-block;
-		margin-top: 150px;
-		border-top: 1px solid #deba9d;
-	}
-	.submenu a {
-		display: inline-block;
-		margin: 5px;
-		font-size: 30px;
-		width: 100%;
-		text-align: center;
-	}
+header .sub-menu ul.menu li:first-child::before {
+	display: none;
 }
-
-/* BODY */
-.row {
-	overflow: visible;
+header .sub-menu ul.menu li a {
+	font-size: 12px;
+	padding: 11px 16px;
+	display: block;
+	color: #656565;
 }
-.col {
-	float: left;
-	width: 33.3%;
-	text-align: center;
+header .sub-menu ul.menu li a:hover {
+	color: #000;
 }
-.col-1 {
-	background-color: #9e7777;
+header .sub-menu .search {
+	position: relative;
+	height: 34px;
 }
-.col-2 {
-	background-color: #f5e8c7;
-}
-.col-3 {
-	background-color: #deba9d;
-}
-@media (max-width: 500px) {
-	.col {
-		width: 100%;
-	}
-	.gen-img {
-		display: none;
-	}
-}
-.gen-img {
-	width: 400px;
-	height: 800px;
-	margin: 30px;
-}
-.gen-link {
-	display: inline-block;
+header .sub-menu .search input {
+	width: 36px;
+	height: 34px;
+	padding: 4px 10px;
+	border: 1px solid #ccc;
+	box-sizing: border-box;
+	border-radius: 5px;
+	outline: none;
 	background-color: #fff;
-	color: brown;
-	padding: 20px;
-	margin: 10px;
-	font-size: 20px;
-	font-weight: 700;
+	color: #777;
+	font-size: 12px;
+	transition: width .4s;
+}
+header .sub-menu .search input:focus {
+	width: 190px;
+	border-color: #669900;
+}
+header .sub-menu .search .material-icons {
+	height: 24px;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	margin: auto;
+	right: 5px;
+	transition: .4s;
+}
+header .sub-menu .search.focused .material-icons {
+	opacity: 0;
 }
